WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119517
[CSSRegions] Wrong auto-height region computation for nested named flows
https://bugs.webkit.org/show_bug.cgi?id=119517
Summary
[CSSRegions] Wrong auto-height region computation for nested named flows
Mihnea Ovidenie
Reported
2013-08-06 05:31:32 PDT
In the case of nested named flows below: <!-- flow2 content goes into region2 that is part of flow1 and is absolutely positioned --> <div id="flow2" style="-webkit-flow-into: flow2;"></div> <div id="flow1" style="-webkit-flow-into: flow1;"> <div id="region2" style="-webkit-flow-flow: flow2; position: absolute;"></div> </div> <div id="region1" style="-webkit-flow-from: flow1;"></div> the auto-height computed value for region1 is wrong having a huge value.
Attachments
Patch
(5.21 KB, patch)
2013-08-06 05:44 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.62 KB, patch)
2013-08-06 23:02 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2013-08-06 05:44:41 PDT
Created
attachment 208184
[details]
Patch
Dave Hyatt
Comment 2
2013-08-06 11:16:53 PDT
Comment on
attachment 208184
[details]
Patch r=me
Mihnea Ovidenie
Comment 3
2013-08-06 23:02:11 PDT
Created
attachment 208238
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2013-08-07 02:09:56 PDT
Comment on
attachment 208238
[details]
Patch for landing Clearing flags on attachment: 208238 Committed
r153781
: <
http://trac.webkit.org/changeset/153781
>
WebKit Commit Bot
Comment 5
2013-08-07 02:10:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug